[package]
name = "rusk-abi"
version = "0.13.0-rc.0"
edition = "2021"

repository = "https://github.com/dusk-network/rusk"
description = "The ABI to develop Dusk Network smart contracts"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
dusk-core = { workspace = true, features = ["zk"] }
dusk-bytes = { workspace = true }
piecrust = { workspace = true }
lru = { workspace = true }
blake2b_simd = { workspace = true }
dusk-poseidon = { workspace = true }
rkyv = { workspace = true, features = ["size_32"] }

[dev-dependencies]
rand = { workspace = true, features = ["getrandom"] }
once_cell = { workspace = true }
ff = { workspace = true }

[features]
debug = ["piecrust/debug"]
