[package]
name = "rusk-profile"
version = "0.6.0"
edition = "2021"
autobins = false

[dependencies]
dirs = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
console = { workspace = true }
version_check = { workspace = true }
