[package]
name = "rusk-profile"
version = "1.4.1-alpha.1"
autobins = false

repository = "https://github.com/dusk-network/rusk"
description = "Utility crate to handle Rusk profile directories"

license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
dirs = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
blake3 = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
console = { workspace = true }
version_check = { workspace = true }
indexmap = { workspace = true, optional = true }    # 2.12 requires rustc edition 2024
