[package]
name = "rusk-prover"
version = "0.5.0"
edition = "2021"
autobins = false

[dependencies]
dusk-bytes = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
dusk-plonk = { workspace = true, features = ["rkyv-impl", "alloc"] }
rusk-profile = { workspace = true }
execution-core = { workspace = true, features = ["zk"] }

[dev-dependencies]
hex = { workspace = true }

[features]
no_random = []
std = [
    "dusk-plonk/std"
]
