[package]
name = "rusk-prover"
version = "0.5.0"
edition = "2021"
autobins = false

[dependencies]
dusk-bytes = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
dusk-plonk = { workspace = true, features = ["rkyv-impl", "alloc"] }
rusk-profile = { workspace = true }
dusk-core = { workspace = true, features = ["zk"] }

# debug dependencies
hex = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }

[features]
no_random = []
std = [
    "dusk-plonk/std"
]
debug = ["hex", "tracing"]
