[package]
name = "rusk-prover"
version = "1.0.1"
edition = "2021"
autobins = false

repository = "https://github.com/dusk-network/rusk"
description = "Local prover for Dusk Network"
license = "MPL-2.0"

[dependencies]
dusk-bytes = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true, features = ["getrandom"] }
dusk-plonk = { workspace = true, features = ["rkyv-impl", "alloc"] }
rusk-profile = { workspace = true }
dusk-core = { workspace = true, features = ["zk"] }

# debug dependencies
hex = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }

[features]
no_random = []
std = [
    "dusk-plonk/std"
]
debug = ["hex", "tracing"]
