[package]
name = "rusk-recovery"
version = "0.6.0"
edition = "2021"
autobins = false
description = "Tool to restore Rusk to factory settings"

[lib]
name = "rusk_recovery_tools"
path = "src/lib.rs"


[dependencies]
dusk-bytes = "0.1"
dusk-plonk = { version = "0.19", features = ["rkyv-impl"] }
hex = "0.4"
rand = "0.8"
once_cell = "1.13"
ff = { version = "0.13", default-features = false }
tracing = { version = "0.1", features = ["log"] }
http_req = "0.8"
zip = "0.5"
url = "2.3"
flate2 = "1"
tar = "0.4"
cargo_toml = "0.15"

license-circuits = { version = "0.1", path = "../circuits/license" }

rusk-profile = { version = "0.6", path = "../rusk-profile" }
rusk-abi = { version = "0.13.0-rc", path = "../rusk-abi", default-features = false, features = ["host"] }
execution-core = { version = "0.1.0", path = "../execution-core", features = ["zk", "std"] }

serde_derive = { version = "1", optional = true }
serde = { version = "1", optional = true }
toml = { version = "0.5", optional = true }
bs58 = { version = "0.4", optional = true }

[features]
state = ["serde_derive", "serde", "toml", "bs58"]
keys = []
