[package]
name = "rusk-recovery"
version = "0.6.0"
edition = "2021"
autobins = false
description = "Tool to restore Rusk to factory settings"

[lib]
name = "rusk_recovery_tools"
path = "src/lib.rs"


[dependencies]
rusk-profile = { workspace = true }

# stake and keys feature dependency
dusk-core = { workspace = true, features = ["zk", "std"], optional = true }
once_cell = { workspace = true, optional = true }
tracing = { workspace = true, features = ["log"], optional = true }

# state feature dependencies
serde_derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
dusk-bytes = { workspace = true, optional = true }
ff = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
hex = { workspace = true, optional = true }
http_req = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
dusk-abi = { workspace = true, features = ["host"], optional = true }
tar = { workspace = true, optional = true }
url = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

# keys feature dependencies
cargo_toml = { workspace = true, optional = true }
dusk-plonk = { workspace = true, features = ["rkyv-impl"], optional = true }
lazy_static = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, features = ["full"], optional = true }

[features]
state = [
    "dusk-core",
    "once_cell",
    "tracing",
    "serde_derive",
    "serde",
    "toml",
    "bs58",
    "dusk-bytes",
    "ff",
    "flate2",
    "hex",
    "http_req",
    "rand",
    "dusk-abi",
    "tar",
    "url",
    "zip",
]
keys = [
    "dusk-core",
    "once_cell",
    "tracing",
    "cargo_toml",
    "dusk-plonk",
    "lazy_static",
    "reqwest",
    "tokio",
]
