[package]
name = "rusk-schema"
version = "0.2.0"
edition = "2021"

license = "MPL-2.0"
readme = "README.md"

description = "Schema definition for Rusk GRPC services"
keywords = ["protobuf", "grpc", "schema"]

repository = "https://github.com/dusk-network/rusk"

exclude = [".github/workflows/", ".gitignore"]

[dependencies]
tonic = "0.6"
prost = "0.9"

dusk-pki ="0.10.0-rc"
dusk-bytes = "0.1"
phoenix-core = "0.16.0-rc"

[build-dependencies]
tonic-build = "0.6"
