[package]
name = "rusk-schema"
version = "0.5.0"
edition = "2021"

license = "MPL-2.0"
readme = "README.md"

description = "Schema definition for Rusk GRPC services"
keywords = ["protobuf", "grpc", "schema"]

repository = "https://github.com/dusk-network/rusk"

exclude = [".github/workflows/", ".gitignore"]

[dependencies]
tonic = "0.8"
prost = "0.11"

dusk-pki = "0.12"
dusk-bytes = "0.1"
phoenix-core = { version = "0.20.0-rc.0", features = ["alloc"] }

[build-dependencies]
tonic-build = "0.8"
