[package]
name = "rusk-wallet"
version = "0.1.0"
edition = "2021"
autobins = false
description = "A library providing functionalities to create wallets compatible with Dusk Network"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["wallet", "dusk", "cryptocurrency", "blockchain"]
repository = "https://github.com/dusk-network/wallet-cli"
license = "MPL-2.0"
exclude = [".github/*", ".gitignore"]

[[bin]]
name = "rusk-wallet"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "3.1", features = ["derive", "env"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.15", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
block-modes = "0.8"
serde_json = "1.0"
hex = "0.4"
tiny-bip39 = "0.8"
crossterm = "0.23"
rand_core = "0.6"
requestty = "0.5.0"
futures = "0.3"
base64 = "0.13"
crypto = "0.3"
blake3 = "1.3"
sha2 = "0.10.7"
toml = "0.5"
open = "2.1"
dirs = "4.0"
bs58 = "0.4"
rand = "0.8"
aes = "0.7"
rocksdb = "0.22"
flume = "0.10.14"
reqwest = { version = "0.11", features = ["stream"] }
dusk-bytes = "0.1"

zeroize = { version = "1", default-features = false, features = ["derive"] }
wallet-core = { path = "../wallet-core" }
execution-core = { path = "../execution-core" }

tracing = "0.1"
tracing-subscriber = { version = "0.3.0", features = [
    "fmt",
    "env-filter",
    "json",
] }

rkyv = { version = "=0.7.39", default-features = false }

konst = "0.3"

[dev-dependencies]
tempfile = "3.2"
