[package]
name = "rusk-wallet"
version = "0.1.0"
edition = "2021"
autobins = false
description = "A library providing functionalities to create wallets compatible with Dusk"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["wallet", "dusk", "cryptocurrency", "blockchain"]
repository = "https://github.com/dusk-network/rusk"
license = "MPL-2.0"
exclude = [".github/*", ".gitignore"]

[[bin]]
name = "rusk-wallet"
path = "src/bin/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
url = { workspace = true, features = ["serde"] }
block-modes = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tiny-bip39 = { workspace = true }
crossterm = { workspace = true }
requestty = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
open = { workspace = true }
dirs = { workspace = true }
bs58 = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng", "getrandom"] }
aes = { workspace = true }
rocksdb = { workspace = true }
flume = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
dusk-bytes = { workspace = true }
blake2b_simd = { workspace = true }

zeroize = { workspace = true, features = ["derive"] }
wallet-core = { workspace = true }
execution-core = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
    "fmt",
    "env-filter",
    "json",
] }

rkyv = { workspace = true }

konst = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
