[package]
name = "test-wallet"
version = "0.1.0"
edition = "2021"
description = "Test wallet used for Rusk"
license = "MPL-2.0"

[dependencies]
rand_core = "^0.6"
dusk-bytes = "^0.1"
rkyv = { version = "0.7", default-features = false }
ff = { version = "0.13", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }

# rusk dependencies
execution-core = { version = "0.1.0", path = "../execution-core" }
wallet-core = { version = "0.1", path = "../wallet-core/" }
rusk-prover = { version = "0.4", path = "../rusk-prover/" }

[dev-dependencies]
rand = "^0.8"

[lib]
crate-type = ["cdylib", "rlib"]
