[package]
name = "test-wallet"
version = "0.1.0"
edition = "2021"
description = "Test wallet used for Rusk"
license = "MPL-2.0"

[dependencies]
rand = { workspace = true }
dusk-bytes = { workspace = true }
rkyv = { workspace = true }
ff = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }

dusk-core = { workspace = true }
wallet-core = { workspace = true }
rusk-prover = { workspace = true }

[dev-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]
