[package]
name = "transfer"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/dusk-network/rusk"
description = "Dusk protocol transfer functionality"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
dusk-core = { workspace = true }
ringbuffer = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
node-data = { workspace = true }
piecrust = { workspace = true }
piecrust-uplink = { workspace = true }
tracing = { workspace = true }
dusk-poseidon = { workspace = true }
dusk-bytes = { workspace = true }
sha3 = { workspace = true }

[build-dependencies]
rusk-profile = { workspace = true }
