[package]
name = "dusk-vm"
version = "1.4.4-alpha.1"
edition = "2021"

repository = "https://github.com/dusk-network/rusk"
description = "The VM to run smart contracts on the Dusk network"
license = "MPL-2.0"
exclude = [".github/workflows/ci.yml", ".gitignore"]

[dependencies]
dusk-core = { workspace = true, features = ["zk"] }
piecrust = { workspace = true }
lru = { workspace = true }
blake2b_simd = { workspace = true }
blake3 = { workspace = true }
rkyv = { workspace = true, features = ["size_32"] }
wasmparser = { workspace = true }
indexmap = { workspace = true, optional = true }    # 2.12 requires rustc edition 2024
serde = { workspace = true, features = ["derive"] }
transfer = { workspace = true }

[dev-dependencies]
rand = { workspace = true, features = ["getrandom"] }
once_cell = { workspace = true }
ff = { workspace = true }
hex = { workspace = true }

[features]
debug = ["piecrust/debug"]
