[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-bytes = "0.1"
bytecheck = { version = "0.6", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
rand_chacha = { version = "0.3", default-features = false }
blake3 = { version = "1", default-features = false }
sha2 = { version = "0.10", default-features = false }
rand = { version = "0.8", default-features = false }
ff = { version = "0.13", default-features = false }
poseidon-merkle = { version = "0.7", features = ["rkyv-impl"] }
execution-core = { version = "0.1", path = "../execution-core/" }
rkyv = { version = "0.7", default-features = false, features = ["alloc"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = { version = "0.2", features = ["global"] }

[dev-dependencies]
rand = "0.8"
rkyv = "0.7"
bytecheck = "0.6"

[features]
