[package]
name = "wallet-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-bytes = { workspace = true }
bytecheck = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
rand_chacha = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
ff = { workspace = true }
dusk-core = { workspace = true }
rkyv = { workspace = true, features = ["alloc"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = { workspace = true, features = ["global"] }

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
proptest = { workspace = true }

[features]
debug = []
