[package]
name = "dusk-wallet-core"
version = "1.1.1-alpha.1"
edition = "2021"
description = "The core functionality of the Dusk wallet"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/rusk"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dusk-bytes = { workspace = true }
bytecheck = { workspace = true }
zeroize = { workspace = true, features = ["derive"] }
rand_chacha = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
ff = { workspace = true }
dusk-core = { workspace = true }
rkyv = { workspace = true, features = ["alloc"] }

[target.'cfg(target_family = "wasm")'.dependencies]
dlmalloc = { workspace = true, features = ["global"] }

[dev-dependencies]
rand = { workspace = true, features = ["std_rng"] }
hex = { workspace = true }
num-bigint = { workspace = true }
tiny-bip39 = { workspace = true }

[features]
debug = []
