[package]
name = "wallet-fs"
version = "0.1.0-alpha"
description = "Utilities for wallet file and key management operations"
repository = "https://github.com/dusk-network/rusk"

license.workspace = true
rust-version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { workspace = true }
aes-gcm = { workspace = true }
block-modes = { workspace = true }
dusk-bytes = { workspace = true }
dusk-core = { workspace = true, features = ["serde"] }
pbkdf2 = { workspace = true }
rand = { workspace = true, features = ["std_rng", "getrandom"] }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex", "base64", "macros"] }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = { workspace = true }
