[package]
name = "bid-circuits"
version = "0.1.0"
authors = ["Jules de Smit <jules@dusk.network>"]
edition = "2018"


[dependencies]
dusk-plonk = "0.8"
plonk_gadgets = "0.6.0-rc"
dusk-blindbid = "0.8.0-rc"
code-hasher = {version = "0.1", path = "../../macros/code-hasher"}

[dev-dependencies]
rand = "0.8"
