[package]
name = "bid-circuits"
version = "0.1.0"
authors = ["CPerezz <carlos@dusk.network>", "Jules de Smit <jules@dusk.network>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/dusk-network/rusk/tree/master/circuits/bid"
categories =["algorithms", "cryptography", "science"]
keywords = ["blindbid", "plonk", "lottery", "zero-knowledge", "crypto"]
description = "Bid-Correctness Circuit implementation using PLONK proving system as backend"
exclude = [
    "README.md",
    "Makefile",
    "rustfmt.toml",
]

[dependencies]
dusk-plonk = "0.8"
plonk_gadgets = "0.6.0-rc"
dusk-blindbid = "0.8.0-rc"
code-hasher = {version = "0.1", path = "../../macros/code-hasher"}

[dev-dependencies]
rand = "0.8"
rusk-profile = {version = "0.3", path = "../../rusk-profile"}
