[package]
name = "bid-circuits"
version = "0.3.0"
authors = ["CPerezz <carlos@dusk.network>", "Jules de Smit <jules@dusk.network>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/dusk-network/rusk/tree/master/circuits/bid"
categories =["algorithms", "cryptography", "science"]
keywords = ["blindbid", "plonk", "lottery", "zero-knowledge", "crypto"]
description = "Bid-Correctness Circuit implementation using PLONK proving system as backend"
exclude = [
    "README.md",
    "Makefile",
    "rustfmt.toml",
]

[dependencies]
dusk-plonk = "0.8"
plonk_gadgets = "0.6.0-rc"
dusk-blindbid = "0.10.0-rc"
code-hasher = {path = "../../macros/code-hasher"}

[dev-dependencies]
rand = "0.8"
phoenix-core = { version = "0.13.0-rc", features = ["canon"] }
dusk-pki = "0.8.0-rc"
rusk-profile = { path = "../../rusk-profile" }
dusk-poseidon = {version = "0.22.0-rc", features = ["std", "canon"] }
