[package]
name = "blindbid-circuits"
version = "0.1.0"
authors = ["CPerezz <carlos@dusk.network>"]
edition = "2018"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/dusk-network/rusk/tree/master/circuits/blindbid"
categories =["algorithms", "cryptography", "science"]
keywords = ["blindbid", "plonk", "lottery", "zero-knowledge", "crypto"]
description = "BlindBid Circuit implementation using PLONK proving system as backend"
exclude = [
    "README.md",
    "Makefile",
    "rustfmt.toml",
]


[dependencies]
dusk-plonk = {version = "0.8", default-features = false, features = ["std"]}
plonk_gadgets = {version = "0.6.0-rc", features = ["std"]}
code-hasher = {path = "../../macros/code-hasher"}
dusk-blindbid = "0.8.0-rc"
dusk-poseidon = {version = "0.21.0-rc", features = ["std", "canon"] }
dusk-pki = "0.7.0-rc"
dusk-bytes = "0.1"

[dev-dependencies]
microkelvin = "0.7"
rand = "0.8"
canonical_derive = "0.6"
canonical = "0.6"