[package]
name = "license-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = "0.6"

dusk-bls12_381 = { version = "0.12", default-features = false, features = ["rkyv-impl"] }
dusk-bytes = "0.1"
dusk-jubjub = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
dusk-pki = { version = "0.13", default-features = false, features = ["rkyv-impl"] }
dusk-poseidon = { version = "0.31", default-features = false, features = ["alloc"] }
dusk-plonk = { version = "0.16", default-features = false, features = ["rkyv-impl", "alloc"] }
dusk-schnorr = { version = "0.14", default-features = false, features = ["rkyv-impl"] }
phoenix-core = { version = "0.21", features = ["alloc"] }
poseidon-merkle = { version = "0.3", features = ["rkyv-impl"] }
zk-citadel = "0.5"
hex = "0.4"

rusk-profile = { version = "0.6", path = "../../rusk-profile", optional = true }
storage = { version = "0.1", path = "../storage", optional = true }

[dev-dependencies]
rand = "0.8"

[features]
store = ["rusk-profile", "storage"]

[[bin]]
name = "license-circuits-store"
path = "src/bin/store.rs"
required-features = ["store"]

[[test]]
name = "test-license"
path = "tests/prove_verify_license_circuit.rs"
required-features = ["rusk-profile"]
