[package]
name = "license-circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
dusk-plonk = { version = "0.20", default-features = false, features = ["rkyv-impl", "alloc"] }
zk-citadel = "0.14"

[dev-dependencies]
rand = "0.8"
rusk-profile = { version = "0.6", path = "../../rusk-profile" }
execution-core = { version = "0.1.0", path = "../../execution-core" }
poseidon-merkle = { version = "0.7", features = ["rkyv-impl", "zk", "size_32"] }
ff = { version = "0.13", default-features = false }
dusk-poseidon = "0.40"
